--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,14 +1,14 @@
-MoveWindow IDM_PARAM_WINDOW -304 1589 316 283
+MoveWindow IDM_PARAM_WINDOW 3 530 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CONS_WINDOW 277 277 922 517
+MoveWindow IDM_CONS_WINDOW 201 201 922 517
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -298 1390 301 201
+MoveWindow IDM_CRSR_WINDOW 0 300 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW -1723 1102 1438 1022
-ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -296 1102 301 291
+MoveWindow IDM_APPL_WINDOW -8 -8 2210 1210
+ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
+MoveWindow IDM_MINI_WINDOW 0 0 301 301
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1715 1153 1422 941
+MoveWindow IDM_MAIN_WINDOW 0 43 2194 1129
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW -298 1869 301 251
+MoveWindow IDM_PERF_WINDOW 3908 690 301 251
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
