--- a/Toolbox/Utilities/Utilities.vcxproj
+++ b/Toolbox/Utilities/Utilities.vcxproj
@@ -27,6 +27,7 @@
     <ClInclude Include="generationNr.h" />
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="Int24.h" />
+    <ClInclude Include="LineType.h" />
     <ClInclude Include="LogarithmicTrackbar.h" />
     <ClInclude Include="ModelInterface.h" />
     <ClInclude Include="MoreTypes.h" />
