Comments, small bug in ModelStorage fixed

--- a/NNet/Models/WindowConfiguration1.cnf
+++ b/NNet/Models/WindowConfiguration1.cnf
@@ -1,14 +1,14 @@
-MoveWindow IDM_PARAM_WINDOW -388 1800 316 283
+MoveWindow IDM_PARAM_WINDOW -292 1609 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CONS_WINDOW 75 75 922 517
+MoveWindow IDM_CONS_WINDOW 201 201 922 517
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW 0 300 301 201
+MoveWindow IDM_CRSR_WINDOW -291 1414 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW -1554 1084 1440 1010
-ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW 0 0 301 301
+MoveWindow IDM_APPL_WINDOW -1928 1070 1936 1056
+ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
+MoveWindow IDM_MINI_WINDOW -291 1123 301 301
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1546 1135 1424 929
+MoveWindow IDM_MAIN_WINDOW -1920 1121 1920 975
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW -1900 1867 301 251
+MoveWindow IDM_PERF_WINDOW -291 1873 301 251
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
