--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -184,6 +184,7 @@
   <ItemGroup>
     <ClInclude Include="Analyzer.h" />
     <ClInclude Include="BaseKnot.h" />
+    <ClInclude Include="Command.h" />
     <ClInclude Include="DrawContext.h" />
     <ClInclude Include="InputNeuron.h" />
     <ClInclude Include="Knot.h" />
