Clean up, commands as internal classes

--- a/NNet/NNetSimu/NNetSimu.rc
+++ b/NNet/NNetSimu/NNetSimu.rc
@@ -32,10 +32,15 @@ IDC_NNET_SIMU_MAIN MENU
 	}
     POPUP "&Edit"
     {
-        MENUITEM "&Select all",                             IDM_SELECT_ALL
-        MENUITEM "&Deselect all",                           IDM_DESELECT_ALL
-        MENUITEM "&Remove trigger sounds",                  IDM_REMOVE_BEEPERS
-        MENUITEM "Select all neurons with &trigger sounds", IDM_SELECT_ALL_BEEPERS
+        MENUITEM "&Undo", IDM_UNDO
+        MENUITEM "&Redo", IDM_REDO
+        POPUP "&Selection"
+        {
+            MENUITEM "&Select all",                             IDM_SELECT_ALL
+            MENUITEM "&Select all neurons with trigger sounds", IDM_SELECT_ALL_BEEPERS
+            MENUITEM "&Deselect all",                           IDM_DESELECT_ALL
+        }
+        MENUITEM "Clear all trigger sounds", IDM_CLEAR_BEEPERS
     }
     POPUP "&Action"
     {
