--- a/NNet/Models/WindowConfiguration1.cnf
+++ b/NNet/Models/WindowConfiguration1.cnf
@@ -1,14 +1,14 @@
-MoveWindow IDM_PARAM_WINDOW -292 1609 316 283
+MoveWindow IDM_PARAM_WINDOW -314 1838 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CONS_WINDOW 201 201 922 517
+MoveWindow IDM_CONS_WINDOW -1129 1402 993 519
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW -291 1414 301 201
+MoveWindow IDM_CRSR_WINDOW -304 1396 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW -1928 1070 1936 1056
-ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
-MoveWindow IDM_MINI_WINDOW -291 1123 301 301
+MoveWindow IDM_APPL_WINDOW -1812 1085 1512 1038
+ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MINI_WINDOW -302 1092 301 301
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1920 1121 1920 975
+MoveWindow IDM_MAIN_WINDOW -1804 1136 1496 957
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW -291 1873 301 251
+MoveWindow IDM_PERF_WINDOW -307 1591 301 251
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
