--- a/NNet/NNetSimu/NNetSimu.vcxproj
+++ b/NNet/NNetSimu/NNetSimu.vcxproj
@@ -99,11 +99,12 @@
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <ExceptionHandling>Async</ExceptionHandling>
       <AdditionalOptions> %(AdditionalOptions)</AdditionalOptions>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Winmm.lib;Pathcch.lib;d2d1.lib;Dwrite.lib;Direct2D.lib;ComCtl32.lib;msimg32.lib;runtimeCPP.lib;Utilities.lib;Win32_utilities.lib;NNetModel.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Winmm.lib;Pathcch.lib;d2d1.lib;Dwrite.lib;Direct2D.lib;ComCtl32.lib;msimg32.lib;runtimeCPP.lib;Utilities.lib;Win32_utilities.lib;NNetModel.lib;NNetWindows.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -164,28 +165,17 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Winmm.lib;Pathcch.lib;d2d1.lib;Dwrite.lib;Direct2D.lib;ComCtl32.lib;msimg32.lib;runtimeCPP.lib;Utilities.lib;Win32_utilities.lib;NNetModel.lib;$(MICROPROFILERDIR)/micro-profiler_$(PlatformName).lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Winmm.lib;Pathcch.lib;d2d1.lib;Dwrite.lib;Direct2D.lib;ComCtl32.lib;msimg32.lib;runtimeCPP.lib;Utilities.lib;Win32_utilities.lib;NNetModel.lib;NNetWindows.lib;$(MICROPROFILERDIR)/micro-profiler_$(PlatformName).lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="AnimationThread.h" />
-    <ClInclude Include="AutoOpen.h" />
-    <ClInclude Include="ComputeThread.h" />
-    <ClInclude Include="DrawModel.h" />
     <ClInclude Include="NNetSimuReadBuffer.h" />
-    <ClInclude Include="Resource.h" />
     <ClInclude Include="win32_MainWindow.h" />
-    <ClInclude Include="NNetModelStorage.h" />
-    <ClInclude Include="NNetWrappers.h" />
-    <ClInclude Include="Preferences.h" />
     <ClInclude Include="SlowMotionDisplay.h" />
     <ClInclude Include="win32_crsrWindow.h" />
     <ClInclude Include="win32_MiniWindow.h" />
-    <ClInclude Include="win32_NNetWindow.h" />
     <ClInclude Include="win32_scriptHook.h" />
     <ClInclude Include="win32_status.h" />
-    <ClInclude Include="win32_triggerSoundDlg.h" />
-    <ClInclude Include="NNetModelWriterInterface.h" />
     <ClInclude Include="win32_parameterDlg.h" />
     <ClInclude Include="win32_performanceWindow.h" />
     <ClInclude Include="win32_slowMotionControl.h" />
@@ -193,30 +183,18 @@
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TimeDisplay.h" />
     <ClInclude Include="Version.h" />
-    <ClInclude Include="win32_NNetAppMenu.h" />
     <ClInclude Include="win32_NNetAppWindow.h" />
-    <ClInclude Include="win32_NNetController.h" />
     <ClInclude Include="win32_simulationControl.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ComputeThread.cpp" />
-    <ClCompile Include="DrawModel.cpp" />
-    <ClCompile Include="NNetModelStorage.cpp" />
     <ClCompile Include="NNetSimu.cpp" />
-    <ClCompile Include="NNetWrappers.cpp" />
-    <ClCompile Include="Preferences.cpp" />
     <ClCompile Include="SlowMotionDisplay.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="TimeDisplay.cpp" />
     <ClCompile Include="win32_crsrWindow.cpp" />
     <ClCompile Include="win32_MiniWindow.cpp" />
-    <ClCompile Include="win32_NNetAppMenu.cpp" />
     <ClCompile Include="win32_NNetAppWindow.cpp" />
-    <ClCompile Include="win32_NNetController.cpp" />
-    <ClCompile Include="win32_NNetWindow.cpp" />
     <ClCompile Include="win32_status.cpp" />
-    <ClCompile Include="win32_triggerSoundDlg.cpp" />
-    <ClCompile Include="NNetModelWriterInterface.cpp" />
     <ClCompile Include="win32_parameterDlg.cpp" />
     <ClCompile Include="win32_performanceWindow.cpp" />
     <ClCompile Include="win32_simulationControl.cpp" />
