work on testing. Compare revived. More window classes moved to NNWindows.

--- a/NNet/NNetSimuConsole/NNetSimuConsole.vcxproj
+++ b/NNet/NNetSimuConsole/NNetSimuConsole.vcxproj
@@ -126,7 +126,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Pathcch.lib;Dwrite.lib;msimg32.lib;runtimeCPP.lib;Utilities.lib;NNetModel.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Pathcch.lib;Dwrite.lib;msimg32.lib;runtimeCPP.lib;Utilities.lib;Win32_utilities.lib;NNetModel.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -145,11 +145,16 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Pathcch.lib;Dwrite.lib;msimg32.lib;runtimeCPP.lib;Utilities.lib;NNetModel.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Pathcch.lib;Dwrite.lib;msimg32.lib;runtimeCPP.lib;Utilities.lib;Win32_utilities.lib;NNetModel.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="NNetSimuConsole.cpp" />
+    <ClCompile Include="stdafx.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Version.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
