--- a/NNet/NNetSimuConsole/NNetSimuConsole.vcxproj
+++ b/NNet/NNetSimuConsole/NNetSimuConsole.vcxproj
@@ -78,12 +78,12 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)..\ToolBox\Utilities;$(SolutionDir)..\ToolBox\runtimeCPP;$(SolutionDir)NNetModel;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)..\ToolBox\Utilities;$(SolutionDir)..\ToolBox\runtimeCPP;$(SolutionDir)NNetModel;$(SolutionDir)Commands;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\x64\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)..\ToolBox\Utilities;$(SolutionDir)..\ToolBox\runtimeCPP;$(SolutionDir)NNetModel;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)..\ToolBox\Utilities;$(SolutionDir)..\ToolBox\runtimeCPP;$(SolutionDir)NNetModel;$(SolutionDir)Commands;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\x64\Release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
