--- a/NNet/NNetSimuConsole/NNetSimuConsole.vcxproj
+++ b/NNet/NNetSimuConsole/NNetSimuConsole.vcxproj
@@ -126,7 +126,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Pathcch.lib;Dwrite.lib;msimg32.lib;runtimeCPP.lib;Utilities.lib;Win32_utilities.lib;NNetModel.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Pathcch.lib;Dwrite.lib;msimg32.lib;runtimeCPP.lib;Utilities.lib;Win32_utilities.lib;Commands.lib;NNetModel.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -145,7 +145,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Pathcch.lib;Dwrite.lib;msimg32.lib;runtimeCPP.lib;Utilities.lib;Win32_utilities.lib;NNetModel.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Pathcch.lib;Dwrite.lib;msimg32.lib;runtimeCPP.lib;Utilities.lib;Win32_utilities.lib;Commands.lib;NNetModel.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
