--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -601,6 +601,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TimeDisplay.h" />
+    <ClInclude Include="UndoRedoMenu.h" />
     <ClInclude Include="win32_crsrWindow.h" />
     <ClInclude Include="win32_MainWindow.h" />
     <ClInclude Include="win32_MiniWindow.h" />
