--- a/NNet/NNetWindows/NNetWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetWindows.vcxproj.filters
@@ -33,9 +33,6 @@
     <ClCompile Include="win32_triggerSoundDlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="DrawModel.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="ComputeThread.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -64,6 +61,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SlowMotionDisplay.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="win32_MainWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -99,9 +99,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="win32_triggerSoundDlg.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="DrawModel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ComputeThread.h">
