--- a/NNet/NNetSimu/NNetSimu.rc
+++ b/NNet/NNetSimu/NNetSimu.rc
@@ -86,21 +86,33 @@ FONT 8, "Ms Shell Dlg"
 {
 }
 
+// Do not remove definition of IDM_DESC_WINDOW DIALOG although it's empty
+// CreateDialogParam needs resource
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDM_DESC_WINDOW DIALOG 0, 0, 200, 150
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
+CAPTION "Model description"
+FONT 8, "Ms Shell Dlg"
+{
+}
+
 //
 // Accelerator resources
 //
 LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
 IDC_NNET_SIMU_MAIN ACCELERATORS
 {
-    "r",            IDM_RUN,          ASCII
-    "s",            IDM_STOP,         ASCII
-    "+",            IDM_PLUS,         ASCII
-    "-",            IDM_MINUS,        ASCII
+    //"r",            IDM_RUN,          ASCII
+    //"s",            IDM_STOP,         ASCII
+    //"+",            IDM_PLUS,         ASCII
+    //"-",            IDM_MINUS,        ASCII
     "z",            IDM_UNDO,         VIRTKEY, CONTROL
     "y",            IDM_REDO,         VIRTKEY, CONTROL
     "a",            IDM_SELECT_ALL,   VIRTKEY, CONTROL
     "s",            IDM_SAVE_MODEL,   VIRTKEY, CONTROL
     "c",            IDM_CRSR_WINDOW,  ASCII,   ALT
+    "d",            IDM_DESC_WINDOW,  ASCII,   ALT
     "p",            IDM_PARAM_WINDOW, ASCII,   ALT
     "m",            IDM_MINI_WINDOW,  ASCII,   ALT
     "?",            IDM_ABOUT,        ASCII,   ALT
