--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,14 +1,16 @@
-MoveWindow IDM_PARAM_WINDOW -290 1394 316 283
+MoveWindow IDM_PARAM_WINDOW -287 1390 316 283
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CONS_WINDOW 277 277 922 517
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW -292 1670 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW -1930 1176 1536 924
+MoveWindow IDM_APPL_WINDOW -1844 1087 1357 1029
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW -290 1094 301 301
+MoveWindow IDM_DESC_WINDOW -491 1392 214 278
+ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MINI_WINDOW -492 1094 503 301
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1922 1228 1520 842
+MoveWindow IDM_MAIN_WINDOW -1836 1139 1341 947
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW -295 1870 301 251
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
